2004-12-20 Vangelis Rokas <vrokas AT otenet.gr>

	* src/SDCCast.c (gatherAutoInit): allow pic16 to emit static
	variables initial values to idata section,
	* src/SDCCicode.c (geniCodeCall): patch from ### to fix unreferenced
	variables in some functions. This utilizes parmBytes field of iCode
	structure to hold the offset of the variable in stack. (might be
	able to use the stack field too?)
	* applied patch from Raphael Neider # ### , # ###
	* src/pic16/glue.c (pic16emitRegularMap): fix to print static
	variable initial values in idata section,
	* src/pic16/ralloc.c (pic16_allocDirReg): don't allocate register
	for static variables with initial value
	* src/device/lib/pic16/libsdcc/float/ulong2fs.c (__ulong2fs):
	applied fix in while loop from Raphael Neider.

2004-12-19 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genCpl): fixed bit=~(char/bit) bugs, added warning
	* src/ds390/main.c (_ds390_regparm): don't pass bit params in registers
	* src/ds390/ralloc.c (serialRegAssign): spill bits
	* src/mcs51/gen.c (genCpl): fixed bit=~(char) bugs, added warning
	* support/Util/SDCCerr.c,
	* support/Util/SDCCerr.h: added warning W_COMPLEMENT for using bit=~(bit)
	* support/regression/tests/bitvars.c: added tests for bitwise complement(~)
	* support/regression/tests/bitwise.c: added test for bitwise complement(~)

2004-12-09 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/sdcc-lib.h: inserted LGPL, added includes
	  asm/ds390/features.h and asm/mcs51/features.h
	* device/include/asm/default/features.h,
	* device/include/asm/gbz80/features.h,
	* device/include/asm/z80/features.h: added empty _AUTOMEM
	  and _STATMEM
	* device/include/asm/ds390/features.h,
	* device/include/asm/mcs51/features.h: added files with defines for
	  _AUTOMEM and _STATMEM indicating automatic and static storage class
	* device/lib/printf_large.c (_print_format): optimized & used _AUTOMEM
	* doc/sdccman.lyx: version 2.4.7, updated xstack documentation